--- a/styles.css
+++ b/styles.css
@@ -128,3 +128,19 @@ ul li {
     width: 35px;
     height: 35px;
 }
+
+.email-link a {
+    display: inline-block;
+    background-color: #6befd9;
+    color: rgb(71, 55, 55);
+    padding: 0px 0px;
+    text-decoration: none;
+    border-radius: 5px;
+    font-size: 16px;
+    transition: background-color 0.3s, transform 0.3s;
+}
+
+.email-link a:hover {
+    background-color: #f0ed38;
+    transform: scale(1.05);
+}
